# xrpy

./: .gitignore  Readme.md  requirements.txt  setup.cfg  setup.py
src/xrpy/: __init__.py  constants.py  deprecated.py  main.py
