[metadata]
name = xrpy-amiwrpremium
version = 0.0.5
author = amiwrpremium
author_email = amiwrpremium@example.com
description = Easier XRPL functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amiwrpremium/xrpy
project_urls =
    Bug Tracker = https://github.com/amiwrpremium/xrpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src